# Transcript-Lab

./: .gitignore  LICENSE  README.md  app.py  compile.py  config.py  ctk_app.py  desktop_app.py  pyproject.toml  transcript.py  transcript1.py  web_app.py
phonetics_lab_ua/: __init__.py  config.py  tokenize.py  transcribe.py  transcript.py
tests/: test_transcription.py
